# starting-ragchatbot-codebase

./: .env.example  .gitignore  CLAUDE.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml
.devcontainer/: devcontainer.json
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_app.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  lint.sh
